src/testCases/parserTestCases/error/caseE.cs16
-- Carston Schilds, Feb 21st 2016
void main(void){

    -- omitting colon
    branch(foo())
        default;
    end;

    branch(foo())
        case 10:;
        case 11:;
        case 12:;
        case 13:;
        case 14:;
        case 15;
        case 16:;
        case 17:;
        case 18:;
        case 19:;
        default:;
    end;

    -- case not a number
    branch(foo())
        default;
    end;

    branch(foo())
        case true:;
        case 11:;
        case 12:;
        case 13:;
        case 14:;
        case 15:;
        case 16:;
        case 17:;
        case 18:;
        case 19:;
        default:;
    end;

    branch(foo())
        case 10:;
        case 11:;
        case 12:;
        case foo():;
        case 14:;
        case 15:;
        case 16:;
        case 17:;
        case 18:;
        case 19:;
        default:;
    end;

    -- omitting statement
    branch(foo())
        default:
    end;

    branch(foo())
        case 10:;
        case 11:;
        case 12:;
        case 13:;
        case 14:;
        case 15:
        case 16:;
        case 17:;
        case 18:;
        case 19:;
        default:;
    end;

}